997
And finally this appears to have been an issue even with the initial fix - happy to file a new bug if thats helpful:
```scala
$ /opt/scala-2.8.0.final/bin/scalac -version
Scala compiler version 2.8.0.final -- Copyright 2002-2010, LAMP/EPFL
$ /opt/scala-2.8.0.final/bin/scalac I.java J.java S.scala 
J.java:2: error: not found: type E
  public void foo(E e) { }
                  ^
one error found
```
```scala
$ /opt/scala-2.8.2.final/bin/scalac -version
Scala compiler version 2.8.2.final -- Copyright 2002-2010, LAMP/EPFL
$ /opt/scala-2.8.2.final/bin/scalac I.java J.java S.scala 
J.java:2: error: not found: type E
  public void foo(E e) { }
                  ^
one error found
```
